spec/test/parser/valid/modifiers/protected_methods.java
protected class A {
  public A() {}
  protected int m() {
    return 42;
  }
}

