spec/test/parser/invalid/modifiers/package_private_methods_and_constructors.java
package dovs.joos.features;

protected class A {
  /* package private */ int m() {
    return 42;
  }
}

